@@ -19,4 +19,6 @@ Alif Wahid  <awah005@users.sourceforge.net>
     - low-level.py
     - pixmap.py
     - pixmap-mixed.py
+    - simple.py
+    - simple-mixed.py
 
